(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name main_proto)
 (libraries num unix cduce-types cduce.lib pomap)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (modules
  (:standard
   \
   ("prototype_js" prototype test))))

(executable
 (name prototype)
 (libraries main_proto)
 (modules prototype))

(executable
 (name prototype_js)
 (libraries main_proto)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx))
 (modules prototype_js))
