(library
 (name main)
 (public_name dynlang_tc)
 (wrapped false)
 (libraries types parsing utils system)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (modules main))

(executable
 (name prototype)
 (libraries main)
 (modules prototype))

(executable
 (name lib_js)
 (libraries main yojson)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx))
 (modules lib_js))